# questfoundry-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  RESOURCES.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: EPIC-15-PREPARATION-SUMMARY.md  EPIC-15-QUICK-START.md  EPIC-16-PREPARATION-SUMMARY.md  EPIC-16-QUICK-START.md  PREPARATION-COMPLETE.md  README.md  RELEASE-MANUAL-STEPS.md  completion-plan.md  conventional-commits.md  epic-15-caching-design.md  epic-15-implementation-plan.md  epic-15-per-role-config-design.md  epic-15-rate-limiting-design.md  epic-15-test-plan.md  epic-16-documentation-design.md  epic-16-implementation-plan.md  epic-16-release-pipeline-design.md  epic-16-versioning-design.md  epic-workflow.md  gap-analysis.md  instructions.md  pr-description-epic-10.md  pr-description-epic-11.md  pr-description-epic-12.md  pr-description-epic-13.md  pr-description-epic-14.md  pr-description-epic-15-full.md  pr-description-epic-15.md  pr-description-epic-16.md
.github/workflows/: docs-deploy.yml  lint.yml  publish.yml  release.yml  test.yml
api/: index.html
api/export/: index.html
api/protocol/: index.html
api/providers/: index.html
api/roles_and_loops/: index.html
api/state/: index.html
api/validation/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  getting-started.md  index.md  installation.md  mkdocs.yml
docs/api/: export.md  index.md  protocol.md  providers.md  roles_and_loops.md  state.md  validation.md
docs/examples/: code-examples.md
docs/guides/: canon-workflows.md  getting-started.md
examples/code-examples/: index.html
getting-started/: index.html
guides/getting-started/: index.html
installation/: index.html
scripts/: bundle_resources.py
search/: search_index.json
src/questfoundry/: __init__.py  __init__.pyi  logging_config.py  logging_config.pyi  orchestrator.py  version.py
tests/: conftest.py  test_logging_config.py  test_models.py  test_orchestrator.py  test_validation.py  test_validators.py  test_version.py
tests/export/: test_binder.py  test_view.py
tests/integration/: test_providers_e2e.py
tests/lifecycles/: test_tu.py
tests/loops/: test_codex_expansion.py  test_gatecheck.py  test_hook_harvest.py  test_loop_execution.py  test_lore_deepening.py  test_registry.py  test_style_tune_up.py
tests/protocol/: test_conformance.py  test_envelope.py  test_file_transport.py
tests/providers/: test_cache.py  test_config.py  test_provider_integration.py  test_rate_limiter.py
tests/roles/: test_base_session_integration.py  test_human_callback.py  test_per_role_config.py  test_roles.py  test_session_manager.py
(+123 files in other folders)
