[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "questfoundry-py"

dynamic = ["version"]

description = "Python library for QuestFoundry protocol and artifact management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Peter Liesdonk", email = "peter@liesdonk.nl"} ]

dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "httpx>=0.25",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/pvliesdonk/questfoundry-py"
Documentation = "https://github.com/pvliesdonk/questfoundry-spec"
Specification = "https://github.com/pvliesdonk/questfoundry-spec"
Schemas = "https://questfoundry.liesdonk.nl/schemas/"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/questfoundry"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["spec"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
